# freefeed-mcp-server

./: .dockerignore  .env.example  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENT.md  AGENT_PROMPT.md  API.md  CHANGELOG.md  DOCKER.md  Dockerfile  FEATURES.md  GitVersion.yml  LICENSE  NETWORKS.md  QUICKSTART.md  README.md  SKILL.md  docker-compose.ssl.yml  docker-compose.yml  generate_cert.sh  mypy.ini  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.sonarlint/: connectedMode.json
freefeed_mcp_server/: __init__.py  __main__.py  ai_agent.py  api.py  client.py  server.py
